unpackaged/main/default/objects/Twenty_Groups__c/Twenty_Groups__c.object-meta.xml
<CustomObject>
    <label>20 Groups</label>
    <nameField>
        <label>Group Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>20 Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>