unpackaged/main/default/objects/Twenty_Groups__c/fields/Active_Members__c.field-meta.xml
<CustomField>
    <fullName>Active_Members__c</fullName>
    <description>Total number of members with the status of active</description>
    <label>Active Members</label>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>X20_Groups_Member__c.Group_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>