unpackaged/main/default/objects/Twenty_Groups__c/fields/Active_No_Bill__c.field-meta.xml
<CustomField>
    <fullName>Active_No_Bill__c</fullName>
    <label>Active - No Bill</label>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Active - Don&#39;t Bill</value>
    </summaryFilterItems>
    <summaryForeignKey>X20_Groups_Member__c.Group_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>