unpackaged/main/default/objects/Twenty_Groups__c/fields/Additional_Day_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Day_Notes__c</fullName>
    <label>Additional Day Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>