unpackaged/main/default/objects/Twenty_Groups__c/fields/Additional_Days_Added__c.field-meta.xml
<CustomField>
    <fullName>Additional_Days_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Days Added</label>
    <type>Checkbox</type>
</CustomField>