unpackaged/main/default/objects/Twenty_Groups__c/fields/Additional_Moderator__c.field-meta.xml
<CustomField>
    <fullName>Additional_Moderator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to add an additional Moderator for the group used for listserv purposes</description>
    <inlineHelpText>Additional Moderator for the group</inlineHelpText>
    <label>Additional Moderator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>20 Groups (Additional Moderator)</relationshipLabel>
    <relationshipName>X20_Groups2</relationshipName>
    <type>Lookup</type>
</CustomField>