unpackaged/main/default/objects/Twenty_Groups__c/fields/Approved_Billing_Exception__c.field-meta.xml
<CustomField>
    <fullName>Approved_Billing_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Billing Exception</label>
    <type>Checkbox</type>
</CustomField>