unpackaged/main/default/objects/Twenty_Groups__c/fields/Average_Meeting_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Meeting_Days__c</fullName>
    <label>Average Yearly Support Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>