unpackaged/main/default/objects/Twenty_Groups__c/fields/AVG_Meeting_Prorate_Expense_Per_Dealer__c.field-meta.xml
<CustomField>
    <fullName>AVG_Meeting_Prorate_Expense_Per_Dealer__c</fullName>
    <label>AVG Meeting Prorate Expense Per Dealer</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>