unpackaged/main/default/objects/Twenty_Groups__c/fields/axcessa_Presentation__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>axcessa Presentation</label>
    <type>Checkbox</type>
</CustomField>