unpackaged/main/default/objects/Twenty_Groups__c/fields/axcessa_Presentation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Presentation_Date_Time__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>