unpackaged/main/default/objects/Twenty_Groups__c/fields/Composite_Notes__c.field-meta.xml
<CustomField>
    <fullName>Composite_Notes__c</fullName>
    <label>Composite Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>