unpackaged/main/default/objects/Twenty_Groups__c/fields/Composite_Only_Members__c.field-meta.xml
<CustomField>
    <fullName>Composite_Only_Members__c</fullName>
    <description>total number of composite only members with a status of active</description>
    <label>Composite Only Member</label>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Type__c</field>
        <operation>equals</operation>
        <value>Composite Only Member</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>X20_Groups_Member__c.Group_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>