unpackaged/main/default/objects/Twenty_Groups__c/fields/Conga_Meeting_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_Meeting_Report_URL__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;ReportId=[Oppty]00OG00000079TRn&quot; +
&quot;&amp;TemplateId=a0TG000000WPmt1&quot; +
&quot;&amp;FP0=1&quot; +
&quot;&amp;OFN=&quot; + SUBSTITUTE(  Group_Name__c , &quot;&amp;&quot;, &quot;{~~~}&quot;) + &quot; - &quot; + &quot;Meeting Report&quot; +
&quot;&amp;DefaultPDF=1&quot; +
&quot;&amp;EmailToId=&quot; + Moderator_Contact_Id__c   +
&quot;&amp;CETId=a0RG000000YxKuB&quot; +
&quot;&amp;EmailRelatedToId=&quot; + Id +
&quot;&amp;QMODE=3&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Meeting Report URL</label>
    <type>Text</type>
</CustomField>