unpackaged/main/default/objects/Twenty_Groups__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Support Staff (User)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>X20_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>