unpackaged/main/default/objects/Twenty_Groups__c/fields/Current_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Current_Candidates__c</fullName>
    <inlineHelpText>Candidates that are currently in Executive Committee review</inlineHelpText>
    <label>Current Candidates</label>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Type__c</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Submitted, Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>X20_Groups_Member__c.Group_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>