unpackaged/main/default/objects/Twenty_Groups__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>IF( OR( Coordinator__r.Id  = $User.Id  , Moderator__r.Id  = $User.Id),  &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User</label>
    <type>Text</type>
</CustomField>