unpackaged/main/default/objects/Twenty_Groups__c/fields/Date_Last_Verfied__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Verfied__c</fullName>
    <description>Date the information was verified by the moderator</description>
    <inlineHelpText>Date the information was verified by the moderator</inlineHelpText>
    <label>Date Last Verified</label>
    <type>Date</type>
</CustomField>