unpackaged/main/default/objects/Twenty_Groups__c/fields/Delete_Date__c.field-meta.xml
<CustomField>
    <fullName>Delete_Date__c</fullName>
    <description>Date the Group discontinued</description>
    <label>Delete Date</label>
    <type>Date</type>
</CustomField>