unpackaged/main/default/objects/Twenty_Groups__c/fields/Disconnected_Members__c.field-meta.xml
<CustomField>
    <fullName>Disconnected_Members__c</fullName>
    <label>Disconnected Members</label>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Disconnected</value>
    </summaryFilterItems>
    <summaryForeignKey>X20_Groups_Member__c.Group_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>