unpackaged/main/default/objects/Twenty_Groups__c/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <label>Franchise - Deprecated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>BMW MOTORCYCLE</fullName>
            </value>
            <value>
                <fullName>BODY SHOP</fullName>
            </value>
            <value>
                <fullName>BUICK</fullName>
            </value>
            <value>
                <fullName>BUY HERE PAY HERE</fullName>
            </value>
            <value>
                <fullName>CADILLAC</fullName>
            </value>
            <value>
                <fullName>CHEVROLET</fullName>
            </value>
            <value>
                <fullName>CHRYSLER</fullName>
            </value>
            <value>
                <fullName>CHRYSLER/PLYMOUTH</fullName>
            </value>
            <value>
                <fullName>COMPACT EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>CULLIGAN WATER</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>GENERAL MOTORS</fullName>
            </value>
            <value>
                <fullName>HARLEY-DAVIDSON</fullName>
            </value>
            <value>
                <fullName>HONDA</fullName>
            </value>
            <value>
                <fullName>HYUNDAI</fullName>
            </value>
            <value>
                <fullName>IND. HVY TRK LEASE/RENTAL</fullName>
            </value>
            <value>
                <fullName>HINO</fullName>
            </value>
            <value>
                <fullName>INDEPENDENT AUCTION</fullName>
            </value>
            <value>
                <fullName>INFINITI</fullName>
            </value>
            <value>
                <fullName>JAGUAR</fullName>
            </value>
            <value>
                <fullName>KENWORTH HEAVY TRUCK</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>LAND ROVER</fullName>
            </value>
            <value>
                <fullName>LEXUS</fullName>
            </value>
            <value>
                <fullName>MAZDA</fullName>
            </value>
            <value>
                <fullName>MERCEDES-BENZ</fullName>
            </value>
            <value>
                <fullName>MITSUBISHI</fullName>
            </value>
            <value>
                <fullName>MULTI-FRANCHISE</fullName>
            </value>
            <value>
                <fullName>NISSAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>