unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Account__c.field-meta.xml
<CustomField>
    <fullName>Group_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>20G</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>20 Groups</relationshipLabel>
    <relationshipName>X20_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>