unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Group_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Deleted</label>
    <type>Checkbox</type>
</CustomField>