unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Email_Address_Controllers__c.field-meta.xml
<CustomField>
    <fullName>Group_Email_Address_Controllers__c</fullName>
    <label>Group Email Address – Controllers</label>
    <type>Email</type>
</CustomField>