unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Email_Address_Other__c.field-meta.xml
<CustomField>
    <fullName>Group_Email_Address_Other__c</fullName>
    <label>Group Email Address – Other</label>
    <type>Email</type>
</CustomField>