unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_History__c.field-meta.xml
<CustomField>
    <fullName>Group_History__c</fullName>
    <label>Group History</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>