unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Initials__c.field-meta.xml
<CustomField>
    <fullName>Group_Initials__c</fullName>
    <label>Group Initials</label>
    <length>25</length>
    <type>Text</type>
</CustomField>