unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Membership_Count__c.field-meta.xml
<CustomField>
    <fullName>Group_Membership_Count__c</fullName>
    <label>Group Membership Count</label>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>X20_Groups_Member__c.Group_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>