unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>What is the Name of the Group?</description>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>