unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Notes__c.field-meta.xml
<CustomField>
    <fullName>Group_Notes__c</fullName>
    <label>Group Notes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>