unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Personality__c.field-meta.xml
<CustomField>
    <fullName>Group_Personality__c</fullName>
    <description>Group Personality</description>
    <inlineHelpText>Group Personality</inlineHelpText>
    <label>Group Personality</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>