unpackaged/main/default/objects/Twenty_Groups__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer Group Management</fullName>
            </value>
            <value>
                <fullName>Dealer Group Manager</fullName>
            </value>
            <value>
                <fullName>Dealer Group Owner/Executive</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Manager/Director</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Owner/General Manager</fullName>
            </value>
            <value>
                <fullName>Management Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>