unpackaged/main/default/objects/Twenty_Groups__c/fields/Growth_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Growth_Support_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Growth Support Needed</label>
    <type>Checkbox</type>
</CustomField>