unpackaged/main/default/objects/Twenty_Groups__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Auction</fullName>
            </value>
            <value>
                <fullName>Automotive Retail</fullName>
            </value>
            <value>
                <fullName>Culligan Water</fullName>
            </value>
            <value>
                <fullName>Heavy Truck</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Powersports</fullName>
            </value>
            <value>
                <fullName>Printers</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>