unpackaged/main/default/objects/Twenty_Groups__c/fields/Is_a_Multi_Statement_Group__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Multi_Statement_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Multi-Statement Group?</label>
    <type>Checkbox</type>
</CustomField>