unpackaged/main/default/objects/Twenty_Groups__c/fields/Is_New_Org__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Org__c</fullName>
    <label>Is New Org?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>