unpackaged/main/default/objects/Twenty_Groups__c/fields/Listserv_Access__c.field-meta.xml
<CustomField>
    <fullName>Listserv_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox only adds or removes users listed in Salesforce Member Contacts. You still need to check the Listserv feature in the Intranet or ask a Master Coordinator to enable/disable the List in WinMaster.</inlineHelpText>
    <label>Listserv Access</label>
    <type>Checkbox</type>
</CustomField>