unpackaged/main/default/objects/Twenty_Groups__c/fields/Manager_Attendance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Attendance_Notes__c</fullName>
    <label>Manager Attendance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>