unpackaged/main/default/objects/Twenty_Groups__c/fields/Manager_s_Attendance_Requried__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Attendance_Requried__c</fullName>
    <label>Manager&#39;s Attendance Requried?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every meeting</fullName>
            </value>
            <value>
                <fullName>Twice per year</fullName>
            </value>
            <value>
                <fullName>Once per year</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>