unpackaged/main/default/objects/Twenty_Groups__c/fields/Manager_Type__c.field-meta.xml
<CustomField>
    <fullName>Manager_Type__c</fullName>
    <description>Select an option if Group Type = Manager/Direct and Dealer Group Manager</description>
    <label>Manager Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Group_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFO/Controller</fullName>
            </value>
            <value>
                <fullName>Collison Body Shop Manager/Director</fullName>
            </value>
            <value>
                <fullName>Finance Manager/Director</fullName>
            </value>
            <value>
                <fullName>Fixed Operations Manager/Director</fullName>
            </value>
            <value>
                <fullName>HR Manager/Director</fullName>
            </value>
            <value>
                <fullName>Internet/BDC Manager/Director</fullName>
            </value>
            <value>
                <fullName>Marketing Manager/Director</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parts Manager/Director</fullName>
            </value>
            <value>
                <fullName>Service Manager/Director</fullName>
            </value>
            <value>
                <fullName>Used Vehicle Manager/Director</fullName>
            </value>
            <value>
                <fullName>Variable Operations Manager/Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>