unpackaged/main/default/objects/Twenty_Groups__c/fields/Meeting_Days__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Days__c</fullName>
    <label>Meeting Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Varies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>