unpackaged/main/default/objects/Twenty_Groups__c/fields/Meeting_Length__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Length__c</fullName>
    <description>How many days long is each meeting?</description>
    <label>Meeting Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-1/2 Days</fullName>
            </value>
            <value>
                <fullName>1st Night &amp; 1-1/2 Days</fullName>
            </value>
            <value>
                <fullName>2 Full Days</fullName>
            </value>
            <value>
                <fullName>3, 1/2 Days</fullName>
            </value>
            <value>
                <fullName>Varies by Cycle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Composite Only</fullName>
            </value>
            <value>
                <fullName>Composite Only – Run on Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>