unpackaged/main/default/objects/Twenty_Groups__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <label>Meeting Notes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>