unpackaged/main/default/objects/Twenty_Groups__c/fields/Meeting_Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Support_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NCM Employee who assists client and NCM Proprietor for this service or product</description>
    <label>Meeting Support Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>NCM_Associates</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>20 Groups (Meeting Support Contact)</relationshipLabel>
    <relationshipName>X20_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>