unpackaged/main/default/objects/Twenty_Groups__c/fields/Meetings_per_Year_upload__c.field-meta.xml
<CustomField>
    <fullName>Meetings_per_Year_upload__c</fullName>
    <label>Meetings per Year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>