unpackaged/main/default/objects/Twenty_Groups__c/fields/Member_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Member_Candidates__c</fullName>
    <description>total number of member candidates with a status of submitted or approved</description>
    <label>Member Candidates</label>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Type__c</field>
        <operation>equals</operation>
        <value>Candidate</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved, Submitted</value>
    </summaryFilterItems>
    <summaryForeignKey>X20_Groups_Member__c.Group_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>