unpackaged/main/default/objects/Twenty_Groups__c/fields/Member_Quarterly_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Member_Quarterly_Bill_Rate__c</fullName>
    <label>Last Quarter Member Bill Rate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>