unpackaged/main/default/objects/Twenty_Groups__c/fields/Members_Consider_Group_Full__c.field-meta.xml
<CustomField>
    <fullName>Members_Consider_Group_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This group is not accepting new candidates</description>
    <label>Members Consider Group Full</label>
    <type>Checkbox</type>
</CustomField>