unpackaged/main/default/objects/Twenty_Groups__c/fields/Moderator__c.field-meta.xml
<CustomField>
    <fullName>Moderator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moderator</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Moderator</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>X20_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>