unpackaged/main/default/objects/Twenty_Groups__c/fields/Moderator_Comments__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Comments__c</fullName>
    <description>Moderator comments about the group</description>
    <inlineHelpText>Moderator comments about the group</inlineHelpText>
    <label>Moderator Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>