unpackaged/main/default/objects/Twenty_Groups__c/fields/Moderator_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Contact_Id__c</fullName>
    <formula>Moderator__r.NCM_Associates_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator Contact Id</label>
    <type>Text</type>
</CustomField>