unpackaged/main/default/objects/Twenty_Groups__c/fields/Moderator_Email__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Email__c</fullName>
    <formula>Moderator__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator Email</label>
    <type>Text</type>
</CustomField>